--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Atividade-Integrador
 
-spring.datasource.url=jdbc:postgresql://dpg-d3408andiees739u4pog-a.oregon-postgres.render.com/segundo_projeto
-spring.datasource.username=segundo_projeto_user
-spring.datasource.password=tvkuD9ELqpKWT6BvFX6pTBJRTzHLp16u
+spring.datasource.url=jdbc:postgresql://dpg-d3r3m7gdl3ps73ccgfj0-a.oregon-postgres.render.com/projeto_integrador_68l1
+spring.datasource.username=projeto_integrador_68l1_user
+spring.datasource.password=KBckSPiEq3zw2nv8W292rFlpVuWUaBv7
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
